# high-probability-trade-locator

./: .env.example  .gitignore  README.md  pyproject.toml
high-probability-trade-locator/: README.md  requirements.txt
high-probability-trade-locator/docs/: DATA_SOURCES.md  PROJECT_PLAN.md
high-probability-trade-locator/src/hptl/cot/: exporter.py  parser.py  run_update.py
high-probability-trade-locator/src/hptl/shared/: file_utils.py
src/hptl/: config.py
src/hptl/confluence/: build_confluence_history.py  build_decision_table.py  run_confluence_update.py
src/hptl/cot/: contracts.py  downloader.py  exporter.py  parser.py  summary.py
src/hptl/history/: build_historical_context.py  export_confluence_json.py  validate_historical_output.py
src/hptl/macro/: __init__.py  build_macro_history.py  macro_scoring.py  news_risk.py  rates_downloader.py  rates_parser.py  ratio_context.py  run_macro_update.py
src/hptl/shared/: excel_utils.py
tests/: test_confluence_cocoa_output.py  test_cot_parser.py  test_macro_rates_layer.py
web-dashboard/: index.html  package.json
web-dashboard/public/data/: confluence_history_latest.json
web-dashboard/src/: main.jsx  styles.css
